tests/NormalTests/paczka1/fuzzy1/97028211.err
Error in line 3: J9ZwF S935 68,8
Error in line 12: 9Igc5f A789 33,4
Error in line 28: ZI5v A789 84,9
Error in line 30: ZI5v A943 19,8
Error in line 33: pAfjN13ci9G S980 69,8
